Creative Bakery landing

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,395 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Creative Bakery</title>
+    <link rel="icon" href="./images/icons/cookie-1.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap"
+      rel="stylesheet"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="page__section header" id="home">
+      <div class="container">
+
+        <div class="header__head">
+          <a href="#home" class="header__head--logo">
+            <img
+              class="header__logo"
+              src="./images/icons/Bakerlab.svg"
+              alt="Bakerlab"
+            >
+          </a>
+          <a href="#menu" class="header__head--menu"> </a>
+
+          <div class="header__menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="#products" class="menu__link">Products</a>
+              </li>
+
+              <li class="menu__item">
+                <a
+                  href="#about" class="menu__link"
+                >
+                About Us
+                </a>
+              </li>
+
+              <li class="menu__item blog">
+                <a href="#about" class="menu__link">
+                  Blog
+                </a>
+              </li>
+
+              <li class="menu__item last">
+                <img
+                  class="menu__phone"
+                  src="./images/icons/phone.svg" alt="phone"
+                >
+                <a href="tel:(629) 555-0129" class="menu__link call">
+                  Contact us
+                </a>
+              </li>
+
+            </ul>
+          </div>
+        </div>
+
+        <p class="header__description">
+          We bake your fantasies — croissants,
+          <br>
+          cakes, cookies, and cupcakes.
+        </p>
+
+        <h1 class="header__content">Creative bakery</h1>
+
+        <a href="#about" class="header__btn" >Learn more</a>
+      </div>
+    </header>
+
+    <nav class="page__section menu" id="menu">
+      <div class="container">
+        <div class="menu__head">
+          <a href="#home" class="menu__head--logo">
+            <img
+              class="menu__head--img"
+              src="./images/icons/Bakerlab.svg"
+              alt="Bakerlab"
+            >
+          </a>
+          <a href="#home" class="menu__head--menu"> </a>
+        </div>
+
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="#products" class="menu__link">Products</a>
+          </li>
+
+          <li class="menu__item">
+            <a
+              href="#about" class="menu__link"
+            >
+            About Us
+            </a>
+          </li>
+
+          <li class="menu__item blog">
+            <a href="#about" class="menu__link">
+              Blog
+            </a>
+          </li>
+
+          <li class="menu__item last">
+            <img src="./images/icons/phone.svg" alt="phone">
+            <a href="#buy" class="menu__link call">
+              Contact us
+            </a>
+          </li>
+
+        </ul>
+      </div>
+      </div>
+    </nav>
+
+    <main class="page__section products">
+      <div class="container">
+
+        <section class="products" id="products">
+          <div class="products__name">
+            <h1 class="products__title">
+              What we bake
+            </h1>
+            <p class="products__description">
+              We can customize our cookies right for your needs. Just imagine it
+            </p>
+          </div>
+
+          <div class="products gallary">
+
+            <div class="product__type type1">
+              <img
+                class="product__type--img"
+                src="./images/img1.png"
+                alt="product1"
+              >
+              <h2 class="product__type--name">Cakes</h2>
+              <p class="product__type--discriprion">
+                Oatmeal cookies with golden raisins, orange zest and chocolate chips
+              </p>
+              <a href="#buy" class="product__type--link">
+                <img src="./images/icons/arrow.svg" alt="arrow">
+                 Order
+              </a>
+            </div>
+
+            <div class="product__type type2">
+              <img
+                class="product__type--img"
+                src="./images/img2.png"
+                alt="product1"
+              >
+              <h2 class="product__type--name">Cakes</h2>
+              <p class="product__type--discriprion">
+                Chocolate biscuit coffee cake topped with a buttercream and powder
+              </p>
+              <a href="#buy" class="product__type--link">
+                <img src="./images/icons/arrow.svg" alt="arrow">
+                Order
+              </a>
+            </div>
+
+            <div class="product__type type3">
+              <img
+                class="product__type--img"
+                src="./images/img3.png"
+                alt="product1"
+              >
+              <h2 class="product__type--name">Donuts</h2>
+              <p class="product__type--discriprion">
+                Light multi-layered croissant strewn with cinammon and almond “petals”
+              </p>
+              <a href="#buy" class="product__type--link">
+                <img src="./images/icons/arrow.svg" alt="arrow">
+                Order
+              </a>
+            </div>
+
+            <div class="product__type type4">
+              <img
+                class="product__type--img"
+                src="./images/img4.png"
+                alt="product1"
+              >
+              <h2 class="product__type--name">Donuts</h2>
+              <p class="product__type--discriprion">
+                Light multi-layered croissant strewn with coconut and nuts
+              </p>
+              <a href="#buy" class="product__type--link">
+                <img src="./images/icons/arrow.svg" alt="arrow">
+                Order
+              </a>
+            </div>
+
+            <div class="product__type type5">
+              <img
+                class="product__type--img"
+                src="./images/img5.png"
+                alt="product1"
+              >
+              <h2 class="product__type--name">Cakes</h2>
+              <p class="product__type--discriprion">
+                Cake with chocolate salted caramel, Vanilla frutti pebbles inside
+              </p>
+              <a href="#buy" class="product__type--link">
+                <img src="./images/icons/arrow.svg" alt="arrow">
+                Order
+              </a>
+            </div>
+
+            <div class="product__type type6">
+              <img
+                class="product__type--img"
+                src="./images/img6.png"
+                alt="product1"
+              >
+              <h2 class="product__type--name">Cookies</h2>
+              <p class="product__type--discriprion">
+                Oatmeal cookies with golden raisins, orange zest and chocolate chips
+              </p>
+              <a href="#buy" class="product__type--link">
+                <img src="./images/icons/arrow.svg" alt="arrow">
+                Order
+              </a>
+            </div>
+          </div>
+        </section>
+
+        <section class="about__us" id="about">
+          <div class="about__us--text">
+            <h1 class="about__us--few">
+              Few words
+              <br>
+              About us
+            </h1>
+
+            <p class="about__us--discription">
+              Like many design teams, Onfido made the transition from Abstract + Sketch, to Figma in the last couple of years. One of the common resistance points internally before making that switch, was Figma’s lack of Git-style branching that Abstract enabled. The design team had come to rely on branching and had built a lot of our processes around it.
+            </p>
+          </div>
+
+          <div class="about__us--stats stat">
+            <div class="stat__item year">
+              <h1 class="stat__num">2015</h1>
+              <p class="stat__des">Foundation year</p>
+            </div>
+
+            <div class="stat__item stores">
+              <h1 class="stat__num">23</h1>
+              <p class="stat__des">Stores</p>
+            </div>
+
+            <div class="stat__item companies">
+              <h1 class="stat__num">155</h1>
+              <p class="stat__des">Companies</p>
+            </div>
+
+            <div class="stat__item clients">
+              <h1 class="stat__num">10k+</h1>
+              <p class="stat__des">Clients</p>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <footer class="page__section footer" id="buy">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__menu">
+            <a
+              href="#home" class="footer__menu--logo">
+              <img
+                src="./images/icons/Bakerlab_logo_white.svg"
+                alt="menu_logo"
+              >
+            </a>
+
+
+            <ul class="footer__menu--list">
+              <h2 class="footer__menu--name">Menu</h2>
+
+              <li class="footer__menu--item">
+                <a
+                  class="footer__menu--link"
+                  href="#products"
+                >
+                Products
+                </a>
+              </li>
+
+              <li class="footer__menu--item">
+                <a
+                  class="footer__menu--link"
+                  href="#about"
+                >
+                About Us
+                </a>
+              </li>
+
+              <li class="footer__menu--item">
+                <a
+                  class="footer__menu--link"
+                  href="#about"
+                >
+                Blog
+                </a>
+              </li>
+
+              <li class="footer__menu--item">
+                <a
+                  class="footer__menu--link"
+                  href="#"
+                >
+                Terms & Privacy
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__contact">
+            <h1 class="footer__contact--title">
+              Contact us
+            </h1>
+
+            <div class="footer__contact--contacts">
+              <ul class="footer__contact--list">
+                <h2 class="footer__contact--name">Call us</h2>
+
+                <li class="footer__contact--item">
+                  <a class="footer__contact--phone" href="tel:(629) 555-0129">(629) 555-0129</a>
+                </li>
+
+                <li class="footer__contact--item">
+                  <a class="footer__contact--phone" href="tel:(603) 555-0123">(603) 555-0123</a>
+                </li>
+
+                <li class="footer__contact--item">
+                  <a class="footer__contact--phone" href="tel:(704) 555-0127">(704) 555-0127</a>
+                </li>
+              </ul>
+
+              <div class="footer__contact--mail">
+                <p class="footer__contact--email">Email us</p>
+                <a
+                  class="footer__contact--link"
+                  href="mailto:hello@miami.com"
+                >
+                  bakerlab@example.com
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="footer__social">
+            <a
+              target="_blank"
+              href="https://www.facebook.com/"
+              class="footer__social--item facebook"
+            >
+            </a>
+
+            <a
+              target="_blank"
+              href="https://www.instagram.com/"
+              class="footer__social--item instagram"
+            >
+            </a>
+
+            <a
+              target="_blank"
+              href="https://twitter.com/"
+              class="footer__social--item twitter"
+            >
+            </a>
+
+          </div>
+
+          <div class="footer__name">
+            <h2 class="footer__name--text">© Bakerlab 2022</h2>
+          </div>
+        </div>
+      </div>
+    </footer>
+
   </body>
 </html>
